fixed display on mobile and made fonts work better and shadows

--- a/css/homePage.css
+++ b/css/homePage.css
@@ -52,10 +52,11 @@ body {
     box-shadow: 12px 16px 26px 0px rgba(0, 0, 0, 0.4);
 }
 .topHeadingCol2{
-    text-align: center;
+    font-family: georgia, garamond, serif;
+    font-style: italic;
+    text-shadow: 4px 4px #e77822;
     color: #fff;
-    font-size: 18px;
-
+    font-size: 56.5px;
 }
 .topHeadingRow{
     border-bottom: 2px solid black;
@@ -76,6 +77,7 @@ body {
 
 .widgetRow{
     margin: 16px;
+    text-align: center;
 }
 
 
@@ -89,10 +91,11 @@ body {
     position: static;
     border-radius: 15px;
     padding: 16px 16px 2%;
-    width: 30%;
+    width: 25%;
     vertical-align: top;
     box-shadow: 12px 16px 26px 0px rgba(0, 0, 0, 0.4);
 }
+
 
 
 .middleHeading a {
@@ -144,39 +147,46 @@ body {
         float: right;
         display: block;
     }
+    .footer {
+        background-color: #78BE20;
+        position: relative;
+        bottom: 0;
+        margin: 0;
+        width: 100%;
+        alignment-baseline: baseline;
+        height: 150px;
+        clear: both;
+    }
 
     .topHeadingRow{
         border-bottom: 2px solid black;
         border-top: 2px solid black;
         width: 100%;
         background-color: #78BE20;
-        box-shadow: 12px 16px 26px 0px rgba(0, 0, 0, 0.4);
+        box-shadow: 12px 16px 26px 0;
+        rgba(0, 0, 0, 0.4);
     }
-    .miningWidget {
+    .push{
+        height: 0;
+    }
+    .widget {
         background-color: #78BE20;
         border: 2px solid black;
+        box-shadow: 12px 16px 26px 0;
+        rgba(0, 0, 0, 0.4);
+        border-radius: 15px;
         display: inline-block;
-        min-height: 400px;
-        min-width: 310px;
-        max-width: 500px;
-    }
-
-    .walletWidget {
-        background-color: #78BE20;
-        border: 2px solid black;
-        display: inline-block;
-        min-height: 400px;
-        min-width: 310px;
-        max-width: 500px;
+        width: 95%;
+        padding: 8px;
     }
 
-    .infoWidget {
-        background-color: #78BE20;
-        border: 2px solid black;
-        display: inline-block;
-        min-height: 400px;
-        min-width: 310px;
-        max-width: 500px;
+    .topHeadingCol2{
+        text-align: center;
+        font-family: georgia, garamond, serif;
+        font-style: italic;
+        text-shadow: 4px 4px #e77822;
+        color: #fff;
+        font-size: 36px;
     }
 }
 
@@ -203,5 +213,15 @@ body {
         float: none;
         display: block;
         text-align: left;
+    }
+
+    .bottomHeading {
+        background-color: #78BE20;
+        font-size: 18px;
+        border-bottom: 2px solid black;
+        color: #fff;
+        text-align: center;
+        font-family: Arial, Helvetica, sans-serif;
+        box-shadow: 12px 16px 26px 0px rgba(0, 0, 0, 0.4);
     }
 }
