--- a/css/secondaryPage.css
+++ b/css/secondaryPage.css
@@ -35,17 +35,20 @@ body {
 
 }
 
+.widgetRow{
+    margin: 16px;
+    text-align: center;
+}
+
 .widget {
     background-color: #78BE20;
     border: 2px solid black;
-    display: inline-block;
     border-radius: 15px;
-    min-width: 95%;
-    max-width: 100%;
-    min-height:95%;
-    max-height:100%;
-    margin: 8px;
-    box-shadow: 12px 16px 26px 0px rgba(0, 0, 0, 0.4);
+    display: block;
+    margin: 16px;
+    max-height: 100%;
+    box-shadow: 12px 16px 26px 0;
+    rgba(0, 0, 0, 0.4);
 
 }
 @media screen and (max-width: 600px) {
@@ -65,14 +68,29 @@ body {
         overflow-x: hidden;
     }
 
+    .footer {
+        background-color: #78BE20;
+        position: relative;
+        bottom: 0;
+        margin: 0;
+        width: 100%;
+        alignment-baseline: baseline;
+        height: 150px;
+        clear: both;
+    }
+
     .widget {
         background-color: #78BE20;
-        border: 16px solid black;
+        border: 2px solid black;
         display: inline-block;
+        border-radius: 15px;
+        box-shadow: 12px 16px 26px 0;
+        rgba(0, 0, 0, 0.4);
         min-width: 95%;
         max-width: 100%;
         min-height:95%;
-        max-height:100%
+        max-height:100%;
+        margin: 0;
 
     }
 }
